Spacing issue fix

--- a/blocks/case-study-excerpt/editor.scss
+++ b/blocks/case-study-excerpt/editor.scss
@@ -46,6 +46,10 @@
 				text-align: left;
 			}
 		}
+
+		h3.blocks-rich-text__tinymce.mce-content-body {
+			margin-top: 0;
+		}
 	}
 
 	.case-study-image {
