--- a/blocks/case-study-excerpt/style.scss
+++ b/blocks/case-study-excerpt/style.scss
@@ -40,6 +40,10 @@
 				text-align: left;
 			}
 		}
+
+		h3 {
+			margin-top: 0;
+		}
 	}
 
 	.case-study-image {
